--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.lvlin.mvidemo"
+        applicationId "com.lvlin.mvvmdemo"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -39,17 +39,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    // Added Dependencies
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
