feat(mvi)：MVVM databinding架构实现 简单的MVVM databinding架构demo实现

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.lvlin.mvvmdemo"
+        applicationId "com.lvlin.mvvmdatabingdemo"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -29,6 +29,10 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    dataBinding {
+        enabled = true
     }
 }
 
